--- a/public/html/login.html
+++ b/public/html/login.html
@@ -8,10 +8,10 @@
     <link href="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
 <script src="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
 <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-<script>
+<!-- <script>
 	console.log("display cookies");
     console.log(document.cookie);
-</script>
+</script> -->
    <!--Made with love by Mutiullah Samim -->
    
 	<!--Bootsrap 4 CDN-->
@@ -21,7 +21,7 @@
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
 
 	<!--Custom styles-->
-	<link rel="stylesheet" type="text/css" href="css/loginstyles.css">
+	<link rel="stylesheet" type="text/css" href="../css/loginstyles.css">
 </head>
 <body>
 <div class="container">
@@ -59,7 +59,7 @@
 					Don't have an account?<a href="register.html">Sign Up</a>
 				</div>
 				<div class="d-flex justify-content-center">
-					<a href="#">Forgot your password?</a>
+					<a href="FogPass.html">Forgot your password?</a>
 				</div>
 			</div>
 		</div>
