--- a/public/html/register.html
+++ b/public/html/register.html
@@ -8,36 +8,29 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/register.css">
+    <link rel="stylesheet" href="../css/register.css">
     <title>Document</title>
 </head>
 <body>
 <!------ Include the above in your HEAD tag ---------->
 
-<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.8/css/all.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.8/css/all.css">
+    <div class="container">
+    <br>  <br>
 
-
-<div class="container">
-<br>  
-<hr>
-
-
-
-
-
-<div class="card bg-light">
-<article class="card-body mx-auto" style="max-width: 400px;">
-	<h4 class="card-title mt-3 text-center">Create Account</h4>
-	<p class="text-center">Get started with your free account</p>
+        <div class="card bg-light">
+        <article class="card-body mx-auto" style="max-width: 400px;">
+	    <h4 class="card-title mt-3 text-center">Create Account</h4>
+	    <p class="text-center">Get started with your free account</p>
 	
 	
-	<form action="/register.html" method="post">
-	<div class="form-group input-group">
-		<div class="input-group-prepend">
+	    <form action="/register.html" method="post">
+	    <div class="form-group input-group">
+		    <div class="input-group-prepend">
 		    <span class="input-group-text"> <i class="fa fa-user"></i> </span>
-		 </div>
-        <input name="userName" class="form-control" placeholder="Full name" type="text">
-    </div> <!-- form-group// -->
+		     </div>
+             <input name="userName" class="form-control" placeholder="Full name" type="text">
+         </div> <!-- form-group// -->
     <div class="form-group input-group">
     	<div class="input-group-prepend">
 		    <span class="input-group-text"> <i class="fa fa-envelope"></i> </span>
@@ -68,15 +61,15 @@
     <div class="form-group">
         <button type="submit" class="btn btn-primary btn-block"> Create Account  </button>
     </div> <!-- form-group// -->      
-    <p class="text-center">Have an account? <a href="login.html">Log In</a> </p>                                                                 
+    <p class="text-center">Have an account? <a href="/">Log In</a> </p>                                                                 
 </form>
 </article>
-</div> <!-- card.// -->
+</div> <!-- card.// ./login.html-->
 
 </div> 
 <!--container end.//-->
 
-<br><br>
+<!-- <br><br>
 <article class="bg-secondary mb-3">  
 <div class="card-body text-center">
     <h3 class="text-white mt-3">Bootstrap 4 UI KIT</h3>
@@ -85,7 +78,7 @@ and product landing pages</p>   <br>
 <p><a class="btn btn-warning" target="_blank" href="http://bootstrap-ecommerce.com/"> Bootstrap-ecommerce.com  
  <i class="fa fa-window-restore "></i></a></p>
 </div>
-<br><br>
+<br><br> -->
 </article>
 </body>
 </html>
